<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/title_about_more_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:text="Африканский ёж"
            android:textColor="@color/gold"
            style="@style/customtext"
            android:layout_marginBottom="8dp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/orange_line"/>
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/text_african_hedgehog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Что-то интересное"
            style="@style/customtext"
            android:textColor="@color/gold"
            android:textSize="24dp"/>

            <Button
                android:id="@+id/button_lifestyle_african"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gold"
                android:text="@string/lifestyle" />

            <TextView
                android:id="@+id/text_lifestyle_african"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/customtext"
                android:textColor="@color/gold"
                android:text="@string/lifestyle_text_african"
                android:textSize="24sp"
                android:visibility="gone"
                android:padding="10dp" />

            <Button
                android:id="@+id/button_living_african"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gold"
                android:text="@string/life_in_the_house" />

            <TextView
                android:id="@+id/text_living_african"
                android:layout_width="match_parent"
                android:textColor="@color/gold"
                style="@style/customtext"
                android:layout_height="wrap_content"
                android:text="@string/living_text_african"
                android:textSize="24sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_facts_african"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gold"
                android:text="@string/interesting_facts" />

            <TextView
                android:id="@+id/text_facts_african"
                android:layout_width="match_parent"
                style="@style/customtext"
                android:textColor="@color/gold"
                android:layout_height="wrap_content"
                android:text="@string/facts_text_african"
                android:textSize="24sp"
                android:visibility="gone" />
        </LinearLayout>
</ScrollView>